...
        super.viewDidLoad()
      
        deleteButton.isEnabled = false
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.leftBarButtonItem = editButtonItem
        tableView.allowsMultipleSelectionDuringEditing = true
        tableView.accessibilityIdentifier = "List todos"
        addButton.accessibilityLabel = "Add"
    }
    
    override func viewWillAppear(_ animated: Bool) {
            super.viewWillAppear(animated)
            fetchItems()
       }
...
