...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="T5z-HO-jaV" id="4Te-C1-C1g"/>
                            <outlet property="delegate" destination="T5z-HO-jaV" id="nsU-8V-aQu"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="To-Do List" largeTitleDisplayMode="always" id="fvf-dE-DHu">
                        <rightBarButtonItems>
                            <barButtonItem systemItem="add" id="Fy9-lU-6NI">
                                <connections>
                                    <action selector="addItem:" destination="T5z-HO-jaV" id="o0S-I3-bpL"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="trash.circle.fill" catalog="system" id="5G8-AJ-FPt">
                                <connections>
                                    <action selector="deleteItems:" destination="T5z-HO-jaV" id="BTD-H4-BuK"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
